修改Logo。UI。小BUG待处理